# opyndata

./: README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish-to-pypi.yml
docs/templates/: logo.mako
examples/: example_single_rec.py  import_data_example.py  visualize_h5_data.py
opyndata/: __init__.py  data_import.py  misc.py  processing.py  visualization.py
